--- a/index.html
+++ b/index.html
@@ -5,9 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <title>Portifólio</title>
 </head>
 <body>
-    
+    <!-- Navbar Section Start -->
+    <header>
+        <a href="" class="logo">Meu <span> Portifólio</span> Dev.</a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+        <ul id="nav-bar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#skills">Hablidades</a></li>
+            <li><a href="#services">Estudos</a></li>
+            <li><a href="#contact">Contato</a></li>
+            <div class="bx bx-moon" id="darkmod"></div>
+        </ul>
+    </header>
+    <!-- Navbar Section End-->
+    <section class="home" id="home">
+        <div class="social">
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-meta'></i></a>
+        </div>
+        <div class="home-img">
+            <img src="img/main2.png" alt="">
+        </div>
+        <div class="home-text">
+            <span>Muito prazer, Eu sou</span>
+            <h1>Edinaldo Pereira</h1>
+            <h2>FullStack Developers</h2>
+            <p>Estudante de Tecnologia da Informação <br> Aspirante a desvolvedor de sistema <br> Front-end e Back-end.</p>
+            <a href="#contact" class="btn">Download CV</a>
+        </div>
+    </section>
+    <!--Home Section End-->
 </body>
 </html>
