--- a/index.html
+++ b/index.html
@@ -42,5 +42,90 @@
         </div>
     </section>
     <!--Home Section End-->
+    <!-- About Section Start-->
+    <section class="about" id="about">
+        <div class="heading">
+            <h2>Sobre Mim</h2>
+            <span>Desenvolvedor FullStack</span>
+
+        </div>
+        <div id="about-container">
+            <div id="about-img">
+                <img src="img/main.png" alt="">
+            </div>
+            <div id="about-text">
+                <p>Estudante de Tecnologia da Informação FullStack em migração de carreira, buscando oportunidades para desenvolver habilidades no desenvolvimento de interfaces web e aplicações utilizando essas tecnologias de forma eficiante e criativa.</p>
+                <p>Aberto a proposta profissionais presenciais,remotas ou híbidas</p>
+                <div class="information">
+                    <div id="inf-box">
+                        <i id="bx bxs-user"></i>
+                        <span>Edinaldo Perereira</span>
+                    </div>
+                    <div id="info-box">
+                        <i id="bx bxs-phone"></i>
+                        <span>(011) 9555-5555</span>
+                    </div>
+                    <div class="info-box">
+                        <i id="bx bxs-envelipe"></i>
+                        <span>Developers@gmail.com</span>
+                    </div>
+                </div>
+                <a href="#" class="btn">Download Cv</a>
+            </div>
+        </div>
+    </section>
+    <!-- About Section End-->
+    <!-- Skills Section Start-->
+    <section id="skills" id="skills">
+        <div class="heading">
+            <h2>Minhas habilidades</h2>
+            <span>Aprendendo diariament</span>
+        </div>
+        <div class="skills-container">
+            <div class="bars">
+                <div id="bars-box">
+                    <h3>HTML</h3>
+                    <span>94%</span>
+                    <div id="light-bar"></div>
+                    <div id="percent-bar html-bar"></div>
+                </div>
+                <div id="bars-box">
+                    <h3>CSS</h3>
+                    <span>84%</span>
+                    <div id="light-bar"></div>
+                    <div id="percent-bar css-bar"></div>
+                </div>
+                <div id="bars-box">
+                    <h3>JS</h3>
+                    <span>74%</span>
+                    <div id="light-bar"></div>
+                    <div id="percent-bar js-bar"></div>
+                </div>
+                <div id="bars-box">
+                    <h3>React</h3>
+                    <span>80%</span>
+                    <div id="light-bar"></div>
+                    <div id="percent-bar react-bar"></div>
+                </div>
+                <div id="bars-box">
+                    <h3>Node</h3>
+                    <span>65%</span>
+                    <div id="light-bar"></div>
+                    <div id="percent-bar node-bar"></div>
+                </div>
+                <div id="bars-box">
+                    <h3>Git | Github</h3>
+                    <span>90%</span>
+                    <div id="light-bar"></div>
+                    <div id="percent-bar git-bar"></div>
+                </div>
+            </div>
+            <div id="skill-img">
+                <img src="img/main2.png" alt="Skill">
+            </div>
+        </div>
+    </section>
+    <!--Skills Section End-->
+    <!--Services Section Start-->
 </body>
 </html>
