--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <title>Portifólio</title>
 </head>
 <body>
-    <!-- Navbar Section Start -->
+    <!-- Navbar  Section Start -->
     <header>
-        <a href="" class="logo">Meu <span> Portifólio</span> Dev.</a>
+        <a href="#" class="logo">Meu <span> Portfólio</span> Dev.</a>
         <div class="bx bx-menu" id="menu-icon"></div>
-        <ul id="nav-bar">
+        <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">Sobre</a></li>
-            <li><a href="#skills">Hablidades</a></li>
+            <li><a href="#skills">Habilidades</a></li>
             <li><a href="#services">Estudos</a></li>
             <li><a href="#contact">Contato</a></li>
-            <div class="bx bx-moon" id="darkmod"></div>
+            <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
-    <!-- Navbar Section End-->
+    <!-- Navbar Section End -->
+    <!-- Home Section Start -->
     <section class="home" id="home">
         <div class="social">
             <a href="#"><i class='bx bxl-github'></i></a>
@@ -37,36 +38,38 @@
             <span>Muito prazer, Eu sou</span>
             <h1>Edinaldo Pereira</h1>
             <h2>FullStack Developers</h2>
-            <p>Estudante de Tecnologia da Informação <br> Aspirante a desvolvedor de sistema <br> Front-end e Back-end.</p>
+            <p>Estudante de Tecnologia da Informação <br> Aspirante a desenvolver de sistemas<br> Front-end e Back-end.
+            </p>
             <a href="#contact" class="btn">Download CV</a>
         </div>
     </section>
-    <!--Home Section End-->
-    <!-- About Section Start-->
+    <!-- Home Section End -->
+    <!-- About Section Start -->
     <section class="about" id="about">
         <div class="heading">
             <h2>Sobre Mim</h2>
             <span>Desenvolvedor FullStack</span>
-
         </div>
-        <div id="about-container">
-            <div id="about-img">
+        <div class="about-container">
+            <div class="about-img">
                 <img src="img/main.png" alt="">
             </div>
-            <div id="about-text">
-                <p>Estudante de Tecnologia da Informação FullStack em migração de carreira, buscando oportunidades para desenvolver habilidades no desenvolvimento de interfaces web e aplicações utilizando essas tecnologias de forma eficiante e criativa.</p>
-                <p>Aberto a proposta profissionais presenciais,remotas ou híbidas</p>
+            <div class="about-text">
+                <p>Estudante de Tecnologia da Informação FullStack em migração de carreira, buscando oportunidades para
+                    desenvolver habilidades no desenvolvimento de interfaces web e aplicações utilizando essas
+                    tecnologias de forma eficiente e criativa.</p>
+                <p>Aberto a proposta profissionais presenciais, remotas ou híbridas</p>
                 <div class="information">
-                    <div id="inf-box">
-                        <i id="bx bxs-user"></i>
-                        <span>Edinaldo Perereira</span>
+                    <div class="info-box">
+                        <i class='bx bxs-user'></i>
+                        <span>Edinaldo Pereira</span>
                     </div>
-                    <div id="info-box">
-                        <i id="bx bxs-phone"></i>
+                    <div class="info-box">
+                        <i class='bx bxs-phone'></i>
                         <span>(011) 9555-5555</span>
                     </div>
                     <div class="info-box">
-                        <i id="bx bxs-envelipe"></i>
+                        <i class='bx bxs-envelope'></i>
                         <span>Developers@gmail.com</span>
                     </div>
                 </div>
@@ -74,58 +77,122 @@
             </div>
         </div>
     </section>
-    <!-- About Section End-->
-    <!-- Skills Section Start-->
-    <section id="skills" id="skills">
+    <!-- About Section End -->
+    <!-- Skills Section Start -->
+    <section class="skills" id="skills">
         <div class="heading">
-            <h2>Minhas habilidades</h2>
-            <span>Aprendendo diariament</span>
+            <h2>Minhas Habilidades</h2>
+            <span>Aprendendo diariamente</span>
         </div>
+
         <div class="skills-container">
             <div class="bars">
-                <div id="bars-box">
+
+                <div class="bars-box">
                     <h3>HTML</h3>
                     <span>94%</span>
-                    <div id="light-bar"></div>
-                    <div id="percent-bar html-bar"></div>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar html-bar"></div>
                 </div>
-                <div id="bars-box">
+
+                <div class="bars-box">
                     <h3>CSS</h3>
                     <span>84%</span>
-                    <div id="light-bar"></div>
-                    <div id="percent-bar css-bar"></div>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar css-bar"></div>
                 </div>
-                <div id="bars-box">
-                    <h3>JS</h3>
+
+                <div class="bars-box">
+                    <h3>JavaScript</h3>
                     <span>74%</span>
-                    <div id="light-bar"></div>
-                    <div id="percent-bar js-bar"></div>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar js-bar"></div>
                 </div>
-                <div id="bars-box">
+
+                <div class="bars-box">
                     <h3>React</h3>
                     <span>80%</span>
-                    <div id="light-bar"></div>
-                    <div id="percent-bar react-bar"></div>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar react-bar"></div>
                 </div>
-                <div id="bars-box">
+
+                <div class="bars-box">
                     <h3>Node</h3>
                     <span>65%</span>
-                    <div id="light-bar"></div>
-                    <div id="percent-bar node-bar"></div>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar node-bar"></div>
                 </div>
-                <div id="bars-box">
+                <div class="bars-box">
                     <h3>Git | Github</h3>
                     <span>90%</span>
-                    <div id="light-bar"></div>
-                    <div id="percent-bar git-bar"></div>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar git-bar"></div>
                 </div>
             </div>
-            <div id="skill-img">
+            <div class="skills-img">
                 <img src="img/main2.png" alt="Skill">
             </div>
         </div>
     </section>
-    <!--Skills Section End-->
-    <!--Services Section Start-->
+    <!-- Skills Section End -->
+    <!-- Services Section Start -->
+    <section class="services" id="services">
+        <div class="heading">
+            <h2>Áreas de estudo</h2>
+            <span>Meu caminho profissional</span>
+        </div>
+        <div class="services-content">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bx-server'></i>
+                <h3>Backend Development</h3>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bx-brush'></i>
+                <h3>UI/UX Design</h3>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bxl-android'></i>
+                <h3>App Development</h3>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
+    </section>
+    <!-- Services Section End -->
+    <!-- Contact Section Start -->
+    <section class="contact" id="contact">
+        <div class="heading">
+            <h2>Fale comigo</h2>
+            <span>Que tal mandar uma mensagem?</span>
+        </div>
+        <div class="contact-form">
+            <form action="">
+                <input type="text" placeholder="Nome">
+                <input type="email" name="" id="" placeholder="Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Escreva sua mensagem aqui..."></textarea>
+                <input type="button" value="Enviar" class="contact-button">
+            </form>
+        </div>
+    </section>
+    <!-- Contact Section End-->
+    <div class="footer">
+        <h2>Follow Me</h2>
+        <div class="footer-social">
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-meta'></i></a>
+        </div>
+
+    </div>
+    <div class="copyright">
+        <p>&#169; Edinaldo Pereira</p>
+    </div>
 </body>
 </html>
